# geo-bench

./: .drone.yml  .eaiignore  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  api_brainstorm.py  baseline_segmentation_results.csv  conftest.py  experiment_generator.py  geobench-downloader.py  hp_search.py  hp_search.sh  main_eurosat.py  main_oscd.py  makefile  pyproject.toml  pyproject.toml.bkp  pytest.ini  requirements.txt  trainer.py
.github/workflows/: style.yaml  tests.yaml
analysis_tool/: analysis_notebook.ipynb  compute_sweep_results.py  experiment_overview.py
ccb/: __init__.py
ccb/benchmark/: create_benchmark.py  create_benchmark_test.py  generate_partitions.py  inspect_all.ipynb  inspect_benchmark.ipynb  rasterize_detection.py
ccb/benchmark/dataset_converters/: README.md  benin_smallholder_cashews_inspect.ipynb  bigearthnet.py  brick_kiln.py  chesapeake_land_cover.py  crop_type_south_africa.ipynb  cv4a_kenya_crop_type.py  cv4a_kenya_crop_type_inspect.ipynb  util.py  (+9 more)
ccb/configs/: base_config.yaml  best_hparams_beyond_rgb_classification.json  best_hparams_classification.json  best_hparams_segmentation.json  classification_config.yaml  seed_classification_beyond_rgb_config.yaml  seed_classification_config.yaml  seed_segmentation_config.yaml  segmentation_config.yaml  segmentation_hparams.yaml  timm_hparams.yaml
ccb/dataset/: io.py  io_test.py  statistics.py
ccb/dataset_converters/: README.md  __init__.py  benin_smallholder_cashew_noclouds.ipynb  benin_smallholder_cashews.py  bigearthnet.py  bigearthnet_inspect.ipynb  brick_kiln.py  brick_kiln_inspect.ipynb  chesapeake_land_cover.py  chesapeake_land_cover_inspect.ipynb  convert_all_datasets.py  create_benchmark.py  create_benchmark_test.py  crop_type_south_africa.ipynb  crop_type_south_africa.py  crop_type_utils.py  cv4a_kenya_crop_type.py  cv4a_kenya_crop_type_inspect.ipynb  eurosat.py  eurosat_inspect.ipynb  forestnet.py  forestnet_inspect.ipynb  geolifeclef.py  geolifeclef_inspect.ipynb  inspect_all.ipynb  inspect_tools.py  neon_tree.py  neon_tree_inspect.ipynb  nz_cattle_detection.py  nz_cattle_detection_inspect.ipynb  pv4ger.py  pv4ger_segmentation_inspect.ipynb  seasonet.py  seasonet_inspect.ipynb  so2sat.py  so2sat_inspect.ipynb  test_converters.py  util.py  xview2.py  xview2_inspect.ipynb
ccb/datasets/: datamodule.py
ccb/experiment/: __init__.py  analyze_sweeps.ipynb  check_transforms.ipynb  discriminative_metric.py  experiment.py  experiment_generator.py  experiment_test.py  parse_results.ipynb  parse_results.py  retrieve_runs.py  sequential_dispatcher.py  trainer.py  visualize_segmentation_preds.ipynb
ccb/io/: __init__.py  bandstats.py  dataset.py  dataset_test.py  label.py  label_map.py  task.py  tmp_test.py
ccb/models/: segmentation.py
ccb/tasks/: hp_search.py
ccb/tests/: test_import.py
ccb/torch_toolbox/: __init__.py  dataset.py  model.py  modules.py  rayTrainer.py  sweep_trainer.py  trainer.py  util.py  wandb_sweep_cl.py
dataset_converters/: benin_smallholder_cashews.py  brick_kiln.py  cv4a_kenya_crop_type.py  eurosat.py  eurosat_inspect.ipynb  neon_tree.py  neon_tree_inspect.ipynb  util.py
datasets/: datamodule.py  datasets.py  eurosat_datamodule.py  eurosat_dataset.py  oscd_datamodule.py  oscd_dataset.py  sat_datamodule.py  sat_dataset.py
geobench/: __init__.py  baseline_results.ipynb  config.py  dataset.py  download_geobench.py  example_load_datasets.py  geobench_download.py  label.py  label_map.py  plot_tools.py  task.py
geobench/benchmark/: create_benchmark.py  generate_partitions.py  inspect_benchmark.ipynb
geobench/experiment/: discriminative_metric.py
geobench/io/: __init__.py  bandstats.py  dataset.py  label.py  label_map.py  task.py
geobench/tests/: launch_pytest.py  test_dataset.py  test_download_geobench.py  test_example_load_dataset.py
geobench/torch_toolbox/: dataset.py
make_benchmark/: README.md  bandstats.py  create_benchmark.py  generate_partitions.py  inspect_benchmark.ipynb  label_map.py  rasterize_detection.py  requirements.txt  zenodo_upload.py
make_benchmark/dataset_converters/: README.md  benin_smallholder_cashew_noclouds.ipynb  benin_smallholder_cashews.py  bigearthnet.py  bigearthnet_inspect.ipynb  brick_kiln.py  brick_kiln_inspect.ipynb  chesapeake_land_cover.py  chesapeake_land_cover_inspect.ipynb  convert_all_datasets.py  crop_type_south_africa.py  cv4a_kenya_crop_type.py  eurosat.py  eurosat_inspect.ipynb  forestnet.py  forestnet_inspect.ipynb  geolifeclef.py  inspect_all.ipynb  inspect_tools.py  neon_tree.py  neon_tree_inspect.ipynb  nz_cattle_detection.py  nz_cattle_detection_inspect.ipynb  pv4ger.py  pv4ger_classification_inspect.ipynb  seasonet.py  seasonet_inspect.ipynb  so2sat.py  util.py  viz_proj.ipynb  xview2.py  xview2_inspect.ipynb
models/: custom_encoder.py  moco2_module.py  segmentation.py
paper/: make_tables.ipynb
requirements/: requirements.txt  style.txt  tests.txt
tests/: bench_decompression.py  requirements.txt  test_download_geobench.py
tests/benchmark/: create_benchmark_test.py
tests/configs/: base_classification.yaml  base_segmentation.yaml  classification_hparams.yaml  segmentation_hparams.yaml  sweep_config.yaml
tests/dataset_converters/: test_converters.py  test_crop_type_utils.py  test_util.py
tests/experiment/: test_discriminative_metric.py  test_experiment.py  test_parse_results.py
tests/io/: test_dataset.py
tests/make_benchmark_/: bandstats_test.py
tests/torch_toolbox/: test_model.py  test_modules.py  test_sweep_trainer.py  test_toolbox.py  test_trainer.py
toolbox/: __init__.py  backbone.py  dataset.py  model.py  utils.py
toolbox/core/: backbone.py  dataset.py  functions.py  loss.py  model.py  task_specs.py
toolbox/tasks/: experiment_generator.py
toolbox/tests/: test_toolbox.py  test_utils.py
toolkit/: .eaiignore  .envs  Unsupervised dataset inspect.ipynb  bench_io_speed.py  dispatch_toolkit  dispatch_toolkit.py  exp_launcher.py  exp_launcher_mae_imagenet.py  io_speed_test.py
train/: main_classification.py  main_segmentation.py
utils/: utils.py
(+112 files in other folders)
