[project]
name = "geobench"
version = "1.0.1"
description = "A benchmark designed to advance foundation models for Earth monitoring, tailored for remote sensing. It encompasses six classification and six segmentation tasks, curated for precision and model evaluation. The package also features a comprehensive evaluation methodology and showcases results from 20 established baseline models."
authors = [
    { name = "Alexandre Lacoste", email = "alexandre.lacoste@servicenow.com" },
    { name = "Nils Lehmann" },
    { name = "Pau Rodriguez" },
    { name = "Evan David Sherwin" },
    { name = "Hannah Kerner" },
    { name = "Björn Lütjens" },
    { name = "Jeremy Andrew Irvin" },
    { name = "David Dao" },
    { name = "Hamed Alemohammad" },
    { name = "Alexandre Drouin" },
    { name = "Mehmet Gunturkun" },
    { name = "Gabriel Huang" },
    { name = "David Vazquez" },
    { name = "Dava Newman" },
    { name = "Yoshua Bengio" },
    { name = "Stefano Ermon" },
    { name = "Xiao Xiang Zhu" }
]
license = { text = "Apache-2.0" }
readme = "README.md"

dependencies = [
    "torch>=1.12.0",
    "h5py>=3.8.0",
    "pandas>=1.5.3",
    "seaborn>=0.12.2",
    "tqdm>=4.65.0",
    "scipy>=1.10.1",
    "rasterio>=1.3.8",
    "requests>=2.26.0",
    "huggingface_hub>=0.19.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "nbmake==1.5.4",
    "pytest-cov==6.0.0",
    "timm==0.9.16",
    "h5py==3.12.1",
    "colorama>=0.4.4",
    "flake8>=4.0.1",
    "ipyleaflet>=0.17.2",
    "ipyplot>=1.1.1",
    "torchvision>=0.13.0",
    "xmltodict>=0.12.0",
    "sickle>=0.7.0",
    "tifffile>=2023.8.25",
    "torchgeo @ git+https://github.com/microsoft/torchgeo.git",
]

[project.scripts]
geobench-download = "geobench.geobench_download:download_benchmark"
geobench-test = "geobench.tests.launch_pytest:start"

[tool.setuptools.dynamic]
version = {attr = "geobench.__version__"}

[tool.setuptools.package-data]
geobench = ["py.typed"]

[tool.setuptools.packages.find]
include = ["geobench"]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
extend-select = ["D", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"docs/**" = ["D"]
"tests/**" = ["D"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"